TFP-5418 fjerne oppgave-behandling-kobling